--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,6 +1,6 @@
-librosa==0.10.1
-numpy==1.26.4
-pandas==2.1.4
-requests==2.31.1
-streamlit==1.34.0
-tensorflow==2.16.1
+librosa
+numpy
+pandas
+requests
+streamlit
+tensorflow
